cambios en la navegacion y en la bd

--- a/SitioWeb/js/templates/comentariosAdmin.handlebars
+++ b/SitioWeb/js/templates/comentariosAdmin.handlebars
@@ -10,5 +10,20 @@
       </div>
 
     </div>
-  
+
 {{/each}}
+
+<div class="informaciongeneral encuesta mt-3 mb-3">
+  <form method="" action="" target="_self">
+    <div class="form-group">
+      <label for="comentario">Nuevo Comentario</label>
+      <input type="input" class="form-control comentario" id="comentario" value="" placeholder="Nuevo Comentario" name="comentario">
+    </div>
+    <div class="form-group">
+      <label for="puntaje">Puntaje</label>
+      <input type="input" class="form-control comentario" id="puntaje" value="" placeholder="Puntaje" name="puntaje">
+    </div>
+  </form>
+  <div class="botonesForm mt-3">
+    <button type="submit" class="btn btn-lg btn-enviarComentario">Comentar</button>
+  </div>
