--- a/SitioWeb/js/templates/comentariosUser.handlebars
+++ b/SitioWeb/js/templates/comentariosUser.handlebars
@@ -3,10 +3,10 @@
     <div class="">
 
       <div class="list-group">
-        <a class="list-group-item active">
+        <div class="list-group-item active">
           <h4 class="list-group-item-heading">{{nombre}} | Puntaje: {{puntaje}}</h4>
           <p class="list-group-item-text">{{comentario}}</p>
-        </a>
+        </div>
       </div>
 
     </div>
@@ -17,11 +17,11 @@
   <form method="" action="" target="_self">
     <div class="form-group">
       <label for="comentario">Nuevo Comentario</label>
-      <input type="input" class="form-control comentario" id="comentario" value="" placeholder="Nuevo Comentario" name="comentario">
+      <input type="input" class="form-control comentario" id="comentario" value="" placeholder="Nuevo Comentario" name="comentario" required>
     </div>
     <div class="form-group">
       <label for="puntaje">Puntaje</label>
-      <input type="input" class="form-control comentario" id="puntaje" value="" placeholder="Puntaje" name="puntaje">
+      <input type="number" min="1" max="5" class="form-control comentario" id="puntaje" value="" placeholder="Puntaje" name="puntaje" required>
     </div>
   </form>
   <div class="botonesForm mt-3">
