--- a/SitioWeb/js/templates/comentariosAdmin.handlebars
+++ b/SitioWeb/js/templates/comentariosAdmin.handlebars
@@ -1,6 +1,6 @@
 {{#each comentarios}}
 
-    <div class="">
+    <div class="mb-3">
 
       <div class="list-group">
         <div class="list-group-item active">
@@ -13,12 +13,11 @@
     </div>
 
 {{/each}}
-
+<h3>Nuevo Comentario</h3>
 <div class="informaciongeneral encuesta mt-3 mb-3">
   <form method="" action="" target="_self">
     <div class="form-group">
-      <label for="comentario">Nuevo Comentario</label>
-      <input type="input" class="form-control comentario" id="comentario" value="" placeholder="Nuevo Comentario" name="comentario" required>
+      <textarea name="comentario" class="form-control comentario" id="comentario" placeholder="Nuevo Comentario" name="comentario" required></textarea>
     </div>
     <div class="form-group">
       <label for="puntaje">Puntaje</label>
